fix overflow scroll for category page, fix name format for category

--- a/src/components/category-page/category-page.styles.scss
+++ b/src/components/category-page/category-page.styles.scss
@@ -1,6 +1,9 @@
 .category-page-container {
     min-height: 61vh;
+    width: 100%;
+    overflow-x: scroll;
     >div {
         display: flex;
+        
     }
 }
